--- a/Audio/index.html
+++ b/Audio/index.html
@@ -27,7 +27,7 @@
 	</td>
 	<td>
 	    <h1>Water Bottle Synthesis with Modal Signal Processing</h1>
-        <h2>Jatin Chowdhury, Elliot Canfiel-Dalilou, and Mark Rau</h2>
+        <h2>Jatin Chowdhury, Elliot Canfiel-Dafilou, and Mark Rau</h2>
 	</td>
 		
 	</tr>
