Update web pages

--- a/Audio/index.html
+++ b/Audio/index.html
@@ -14,7 +14,7 @@
     <meta charset="utf-8"/>
     <title>Water Bottle Synthesis with Modal Signal Processing</title>
     <link rel="icon" type="image/vnd.microsoft.icon" href="favicon.ico">
-    <link rel="stylesheet" type="text/css" href="style.css"> 
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   
   <body>
@@ -57,7 +57,13 @@
 	<div class="contentarea" id="demo1"></div>
     <div class="contentarea" id="demo2"></div>
   
-	</section>
+    <div class="contentarea">
+        <h6>Scanning measurements</h6><br>
+        <h4>1700 Hz Mode</h4>
+        <img src="./Scanning/hydroflask.gif">
+    </div>
+
+    </section>
   
 	<footer class="footer">
 		<p><i>Last updated: 04.01.2020</i></p>
